--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -7,7 +7,7 @@
     <video id="live" width="320" height="240" autoplay style="float: right; margin-right:40px"></video>
     <canvas width="320" id="canvas" height="240" style="display: inline;"></canvas>
 
-    <style>
+    <style scoped>
 
         div {
             margin-top: 200px;
