Fix page titles

--- a/app/views/show.scala.html
+++ b/app/views/show.scala.html
@@ -1,6 +1,6 @@
-@(message: String)(implicit r: RequestHeader)
+@()(implicit r: RequestHeader)
 
-@main("Welcome to Play 2.1") {
+@main("Video Filter Demo") {
 
 <div>
     <style scoped>
